39-runtime-monitoring/02 Timer+Monitoring Services(39 域收官): 计时家族(os::elapsed_counter=CLOCK_MONOTONIC clock_gettime(dlsym),elapsedTimer/TimeStamp/TraceTime 在 timerTrace.hpp 独立文件且输出走日志框架非 tty,GC phase 用 GCTraceTimeImpl 非 TraceTime);三个 Monitoring Service=PerfData 读口(ClassLoadingService 类加载事件钩子更新/RuntimeService PerfCounter+TimeStamp/ThreadService 原子计数),JMX/JFR/jstat 同一份数据;悬念指 46-sa-postmortem;大纲回填 ⚠️ 10 组(目录错/TraceTime 位置+输出错/GC 计时错/数据源半对);实证: jstat 直接读 PerfCounter(1841)+gc+phases 四阶段+jcmd attach 可用性修正